# PhiCalc

./: CMakeLists.txt  ComputePhi.cpp  ComputePhi.hpp  Exec.txt  README.md  main.cpp
